// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontPalette renders 0 1`] = `
Array [
  .c0 {
  font-palette: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontPalette renders function 1`] = `
Array [
  .c0 {
  font-palette: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontPalette renders invalid theme path 1`] = `
Array [
  .c0 {
  font-palette: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontPalette renders negative number 1`] = `
Array [
  .c0 {
  font-palette: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontPalette renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-palette: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-palette: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-palette: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-palette: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-palette: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-palette: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-palette: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-palette: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-palette: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-palette: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-palette: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-palette: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-palette: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-palette: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-palette: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-palette: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontPalette renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    font-palette: July;
  }
}

@media April {
  .c0 {
    font-palette: August;
  }
}

@media January {
  .c0 {
    font-palette: September;
  }
}

@media April {
  .c0 {
    font-palette: November;
  }
}

@media June {
  .c0 {
    font-palette: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-palette: July;
  }
}

@media April {
  .c0 {
    font-palette: August;
  }
}

@media January {
  .c0 {
    font-palette: September;
  }
}

@media April {
  .c0 {
    font-palette: November;
  }
}

@media June {
  .c0 {
    font-palette: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-palette: January;
  }
}

@media April {
  .c0 {
    font-palette: December;
  }
}

@media January {
  .c0 {
    font-palette: April;
  }
}

@media April {
  .c0 {
    font-palette: May;
  }
}

@media June {
  .c0 {
    font-palette: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-palette: January;
  }
}

@media April {
  .c0 {
    font-palette: December;
  }
}

@media January {
  .c0 {
    font-palette: April;
  }
}

@media April {
  .c0 {
    font-palette: May;
  }
}

@media June {
  .c0 {
    font-palette: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontPalette renders postitive number 1`] = `
Array [
  .c0 {
  font-palette: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontPalette renders string 1`] = `
Array [
  .c0 {
  font-palette: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontPalette renders valid theme path 1`] = `
Array [
  .c0 {
  font-palette: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-palette: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
